# rust

./: .gitignore  .typos.toml  README.md  shell.nix
nix/: build-rust.nix  release.nix  rust-toolchain.nix  sources.json  typos.nix
src/: .gitignore  Cargo.toml  rust-toolchain.toml  rustfmt.toml
src/add/adder/src/: main.rs
src/adder/src/: lib.rs
src/adder/tests/: integration_test.rs
src/adder/tests/common/: mod.rs
src/concepts/src/: main.rs
src/concurrency/src/: main.rs
src/enums_pattern_matching/src/: main.rs
src/error_handling/src/: main.rs
src/formatted_print/src/: main.rs
src/generic_types_traits_lifetimes/: Cargo.toml
src/generic_types_traits_lifetimes/src/: main.rs
src/guessing_game/src/: main.rs
src/hello_cargo/src/: main.rs
src/iterators_closures/src/: main.rs
src/minigrep/src/: lib.rs  main.rs
src/modules_restaurant/src/: back_of_house.rs  lib.rs
src/modules_restaurant/src/front_of_house/: serving.rs
src/ownership/src/: main.rs
src/smart_pointers/src/: main.rs
src/structs/src/: main.rs
