[workspace]

members = [
    # Libraries
    "modules_restaurant",

    # Binaries
    "hello_cargo",
    "guessing_game",
    "formatted_print",
    "concepts",
    "ownership",
    "structs",
    "enums_pattern_matching",
    "error_handling",
]

resolver = "2"

[workspace.dependencies]

[patch.crates-io]

# Aborts on panic to avoid unwinding
# Makes resulting binary smaller
[profile.release]
panic = 'abort'