[workspace]

members = [
    # Libraries
    "modules_restaurant",
    "adder",

    # Binaries
    "hello_cargo",
    "guessing_game",
    "formatted_print",
    "concepts",
    "ownership",
    "structs",
    "enums_pattern_matching",
    "error_handling",
    "generic_types_traits_lifetimes",
    "minigrep",
]

resolver = "2"

[workspace.dependencies]

[patch.crates-io]

# Aborts on panic to avoid unwinding
# Makes resulting binary smaller
[profile.release]
panic = 'abort'
