[workspace]

members = [
    # Libraries
    "modules_restaurant",
    "adder",

    # Binaries
    "hello_cargo",
    "guessing_game",
    "formatted_print",
    "concepts",
    "ownership",
    "structs",
    "enums_pattern_matching",
    "error_handling",
    "generic_types_traits_lifetimes",
    "minigrep",
    "iterators_closures",
    "smart_pointers",
    "concurrency",
]

resolver = "2"

[workspace.dependencies]

[patch.crates-io]

# Triggered with `cargo build`
[profile.dev]
opt-level = 0 # default setting: zero optimizations

# Aborts on panic to avoid unwinding
# Makes resulting binary smaller
# Triggered with `cargo build --release`
[profile.release]
panic = 'abort'
opt-level = 3 # default setting: max level of optimizations
